--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,2 @@
-<h1>My name is <%= ['Rob', 'Matt', 'Monkey', 'Pig'].sample%></h1>
+<h1>My name is <%= @name %></h1>
 <img src="https://aroadtoadventure.files.wordpress.com/2015/02/monkeys-riding-pig.jpg" style="border:10px dashed red">
